--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
-Package         Version  
---------------- ---------
-certifi         2019.6.16
-chardet         3.0.4    
-dateutils       0.6.6    
-idna            2.8      
-nsetools        1.0.10   
-peewee          3.9.6    
-pip             19.1.1   
-pkg-resources   0.0.0    
-python-dateutil 2.8.0    
-pytz            2019.1   
-requests        2.22.0   
-setuptools      41.0.1   
-six             1.12.0   
-urllib3         1.25.3   
-wheel           0.33.4   
+Package           Version  
+----------------- ---------
+astroid           2.2.5    
+autopep8          1.4.4    
+certifi           2019.6.16
+chardet           3.0.4    
+dateutils         0.6.6    
+idna              2.8      
+isort             4.3.20   
+lazy-object-proxy 1.4.1    
+mccabe            0.6.1    
+nsetools          1.0.10   
+peewee            3.9.6    
+pip               19.1.1   
+pkg-resources     0.0.0    
+pycodestyle       2.5.0    
+pylint            2.3.1    
+PyMySQL           0.9.3    
+python-dateutil   2.8.0    
+pytz              2019.1   
+requests          2.22.0   
+setuptools        41.0.1   
+six               1.12.0   
+typed-ast         1.4.0    
+urllib3           1.25.3   
+wheel             0.33.4   
+wrapt             1.11.2   
