--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "venv/bin/python",
+  "python.pythonPath": "venv/bin/python3",
   "editor.formatOnSave": true,
   "code-runner.runInTerminal": true,
   "code-runner.saveFileBeforeRun": true,
